@@ -1,60 +1,58 @@
 buildscript {
+    ext {
+        springBootVersion = '2.1.6.RELEASE'
+    }
     repositories {
-        jcenter()
         mavenCentral()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
-
     dependencies {
-        classpath 'com.bmuschko:gradle-cargo-plugin:2.1.1'
-        classpath "gradle.plugin.org.liquibase:liquibase-gradle-plugin:2.0.1"
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:2.1.6.RELEASE"
     }
 }
-plugins {
-    id 'java'
-    id 'war'
-    id "org.liquibase.gradle" version "2.0.1"
-}
 
-
-apply plugin: 'com.bmuschko.cargo'
-apply plugin: "org.liquibase.gradle"
+apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: "org.springframework.boot"
+apply plugin: 'io.spring.dependency-management'
 
 group 'com.servletProject.librarySystem'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+sourceCompatibility = JavaVersion.VERSION_12
+targetCompatibility = JavaVersion.VERSION_12
+
+
+compileJava {
+    options.compilerArgs += ["--enable-preview"]
+}
+test {
+    jvmArgs '--enable-preview'
+}
 
 repositories {
     mavenCentral()
-    maven{
-        url "http://mvnrepository.com/artifact/"
-    }
 }
+
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
-    cargo "org.codehaus.cargo:cargo-core-uberjar:1.4.5", "org.codehaus.cargo:cargo-ant:1.4.5"
-    compile group: 'javax.servlet.jsp', name: 'jsp-api', version: '2.2'
-    compile 'org.projectlombok:lombok:1.18.2'
-    compile 'org.postgresql:postgresql:42.2.5'
-    compile group: 'org.liquibase', name: 'liquibase-core', version: '3.6.3'
-    compile 'commons-validator:commons-validator:1.4.1'
-    compile group: 'jstl', name: 'jstl', version: '1.2'
-}
+    implementation('org.springframework.boot:spring-boot-starter-web')
+    implementation("org.springframework.boot:spring-boot-starter-actuator")
+    runtimeOnly('org.springframework.boot:spring-boot-devtools')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+    compile('org.springframework.boot:spring-boot-starter-security')
+    compile('com.auth0:java-jwt:3.4.0')
+    compile('org.projectlombok:lombok')
+    annotationProcessor('org.projectlombok:lombok')
+    compile('org.postgresql:postgresql')
+    compile('org.liquibase:liquibase-core')
+    compile('org.thymeleaf.extras:thymeleaf-extras-springsecurity5')
 
-cargo {
-    containerId = 'tomcat7x'
-    port = 8090
-
-
-    deployable {
-        context = 'mycontext'
-    }
-
-    remote {
-        hostname = 'localhost'
-        username = 'tomcat'
-        password = 'tomcat'
-    }
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('org.springframework.security:spring-security-test')
+    testCompile('junit:junit')
+    testImplementation('org.mockito:mockito-core')
 }
